infrastructure/k3s/overlays/develop/fusionauth/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fusionauth-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - auth-dev.caicedoseguros.com
      secretName: caicedoseguros-tls-cert

  rules:
    - host: auth-dev.caicedoseguros.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fusionauth-svc
                port:
                  number: 80
